<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rawproxy</name>
  <version>0.0.1</version>
  <description>Proxy from ROS2 to DDS</description>
  <maintainer email="wanghamax@gmail.com">wangha</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>tutorial_interfaces</depend>
  <depend>CycloneDDS</depend>

</package>
